# medium-dashboard

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  app.py  authors.csv  authors.txt  dashboard.py  dev.ipynb  eda.ipynb  eda2.ipynb  example profile response output.txt  exploratory_analysis.ipynb  graphql_wrapper.py  payload  pipeline.py  processed_dataset.csv  pyproject.toml  scraper.py  test.html  test.ipynb  test.txt
datasets/: authors_processed.csv  dataset.csv  raw_dataset.csv
debug/: debug_16751911828868978.html  debug_167519118291104.html  debug_1675191182912435.html  debug_1675191182945107.html  debug_1675191182945983.html  debug_16751911830317729.html  debug_1675191183032445.html  debug_16751911830332532.html  debug_1675191183044532.html  debug_1675191183045405.html  debug_1675191183045863.html  debug_1675191183046852.html  debug_16751911830473201.html  debug_1675191183060176.html  debug_1675191183061357.html  debug_16751911830633311.html  debug_1675191183063859.html  debug_1675191183085005.html  debug_16751911830857222.html  debug_16751911830865989.html  debug_1675191183087137.html  debug_1675191183087911.html
medium_scraper/: utils.py
pages/: authors.py  publications.py
