[tool.poetry]
name = "medium-scraper"
version = "0.1.0"
description = ""
authors = ["Alper Balbay <itsc0508@gmail.com>"]
readme = "README.md"
packages = [{include = "medium_scraper"}]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.29.1"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
