[tool.poetry]
name = "medium-scraper"
version = "0.1.0"
description = ""
authors = ["Alper Balbay <itsc0508@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
playwright = "1.29.1"
beautifulsoup4 = "4.11.1"
requests = "2.28.2"
python-dotenv = "0.21.1"
flask-caching = "2.0.2"
requests-html = "0.10.0"
dash-bootstrap-components = "1.4.1"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.3.0"}
flake8 = "6.0.0"
isort = "5.12.0"
ipykernel = "6.22.0"

[tool.poetry.group.test.dependencies]
pytest = "7.2.2"

[tool.isort]
profile = "black"
known_plotly = "plotly"
known_dash = ["dash", "dash_bootstrap_components", "dash_core_components", "dash_html_components", "dash_table"]
known_pandas = ["pandas", "numpy"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "PLOTLY", "DASH", "PANDAS", "FIRSTPARTY", "LOCALFOLDER"]
import_heading_plotly = "data visualization"
import_heading_dash = "dash imports for the dashboard app"
import_heading_pandas = "data processing"

[tool.black]
line-length = 140
target-version = ["py311"]
exclude = ['\.git', '\.DS_STORE', '\.mypy_cache', '\.pytest_cache', '\.ipynb_checkpoints', '\.vscode']
